# Python_ClothRentalStore_Musaelian

./: .env  .env_example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
src/ClothRentalStore/: asgi.py  settings.py  urls.py  wsgi.py
src/config/: settings.py
src/core/: admin.py  forms.py  models.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_alter_category_options_alter_clothingitem_options_and_more.py
src/templates/: base.html  login.html  logout.html  register.html
src/users/migrations/: 0001_initial.py
