[tool.poetry]
name = "clothrentalstore"
version = "0.1.0"
description = ""
authors = ["Karlen M <karlenmusaelian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.8"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
