[tool.poetry]
name = "clothrentalstore"
version = "0.1.0"
description = ""
authors = ["Karlen M <karlenmusaelian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
django-environ = "^0.11.2"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
psycopg-pool = "^3.2.2"
pillow = "^10.4.0"
django-admin-interface = "^0.28.8"
django-colorfield = "^0.11.0"
asgiref = "^3.8.1"
sqlparse = "^0.5.1"
tzdata = "^2024.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
